# cutpilot

./: .gitignore
cutpilot/: CHANGELOG.md  CMakeLists.txt  CMakePresets.json
cutpilot/app/cutpilot-app/: CMakeLists.txt  Canvas.qml  CanvasCluster.cpp  CanvasCluster.h  CommandPalette.cpp  CommandPalette.h  CompositeInspector.cpp  CompositeInspector.h  ExportController.cpp  ExportController.h  KeyManagerPanel.cpp  KeyManagerPanel.h  PaletteModel.cpp  PaletteModel.h  Preview.qml  QuickPanel.cpp  QuickPanel.h  RailPanels.cpp  RailPanels.h  ThemeController.cpp  ThemeController.h  ToolPill.cpp  ToolPill.h  ToolRail.cpp  ToolRail.h  TopBar.cpp  TopBar.h  WorkflowStore.cpp  WorkflowStore.h  WorkflowTemplates.cpp  WorkflowTemplates.h  main.cpp
cutpilot/cmake/: QtSetup.cmake
cutpilot/libs/cutpilot-core/: CMakeLists.txt
cutpilot/libs/cutpilot-core/include/cutpilot/core/: AlignmentGuides.h  ComfyImport.h  CompositeNodes.h  CompositePlan.h  Connection.h  ConnectorPath.h  Node.h  NodeCatalog.h  NodeGraph.h  PipelineOrder.h  PortRules.h  SpatialIndex.h  WorkflowJson.h
cutpilot/libs/cutpilot-core/include/cutpilot/core/command/: AddConnectedNodeCommand.h  AddNodeCommand.h  AddSubgraphCommand.h  Command.h  CommandStack.h  CompositeCommand.h  ConnectCommand.h  DeleteNodesCommand.h  DisconnectCommand.h  EditPromptCommand.h  MoveNodesCommand.h  SetCompositeParamsCommand.h  SetGateLimitCommand.h  SetMediaPathCommand.h  SetModelCommand.h  SetOutputFormatCommand.h
cutpilot/libs/cutpilot-core/include/cutpilot/core/timeline/: EdlWriter.h  ExportBundle.h  GraphTimeline.h  ProjectStore.h  Timeline.h
cutpilot/libs/cutpilot-core/src/: AlignmentGuides.cpp  ComfyImport.cpp  CompositeNodes.cpp  CompositePlan.cpp  ConnectorPath.cpp  NodeCatalog.cpp  NodeGraph.cpp  PipelineOrder.cpp  PortRules.cpp  SpatialIndex.cpp  WorkflowJson.cpp
cutpilot/libs/cutpilot-core/src/command/: AddConnectedNodeCommand.cpp  AddNodeCommand.cpp  AddSubgraphCommand.cpp  CommandStack.cpp  CompositeCommand.cpp  ConnectCommand.cpp  DeleteNodesCommand.cpp  DisconnectCommand.cpp  EditPromptCommand.cpp  MoveNodesCommand.cpp  SetCompositeParamsCommand.cpp  SetGateLimitCommand.cpp  SetMediaPathCommand.cpp  SetModelCommand.cpp  SetOutputFormatCommand.cpp
cutpilot/libs/cutpilot-core/src/timeline/: EdlWriter.cpp  ExportBundle.cpp  GraphTimeline.cpp  ProjectStore.cpp  Timeline.cpp
cutpilot/libs/cutpilot-ipc/: CMakeLists.txt
cutpilot/libs/cutpilot-ipc/include/cutpilot/ipc/: ConvertClient.h  GenerationClient.h  GenerationCoordinator.h  GenerationTypes.h  ResultCache.h  SidecarHost.h
cutpilot/libs/cutpilot-ipc/src/: ConvertClient.cpp  GenerationClient.cpp  GenerationCoordinator.cpp  ResultCache.cpp  SidecarHost.cpp
cutpilot/libs/cutpilot-render/: CMakeLists.txt
cutpilot/libs/cutpilot-render/include/cutpilot/render/: CanvasCamera.h  CanvasController.h  CanvasItem.h  CompositorEngine.h  CompositorService.h  MinimapItem.h  MinimapProjection.h  NodeLayerItem.h  PreviewController.h  PreviewItem.h
cutpilot/libs/cutpilot-render/shaders/: blend.frag  composite.vert  grid.frag  grid.vert  key.frag  mask.frag  preview.frag  transform.frag
cutpilot/libs/cutpilot-render/src/: CanvasController.cpp  CanvasItem.cpp  CanvasRenderer.cpp  CanvasRenderer.h  CompositorEngine.cpp  CompositorService.cpp  ConnectorGeometryBuilder.cpp  ConnectorGeometryBuilder.h  MinimapItem.cpp  NodeCardLayout.h  NodeContentRasterizer.cpp  NodeContentRasterizer.h  NodeGeometryBuilder.cpp  NodeGeometryBuilder.h  NodeLayerItem.cpp  PreviewController.cpp  PreviewItem.cpp
cutpilot/libs/cutpilot-theme/: CMakeLists.txt
cutpilot/libs/cutpilot-theme/include/cutpilot/theme/: ThemeTable.h
cutpilot/libs/cutpilot-theme/src/: ThemeTable.cpp
cutpilot/libs/otf-secrets/: CMakeLists.txt
cutpilot/libs/otf-secrets/include/cutpilot/secrets/: KeychainStore.h  SecretStore.h
cutpilot/libs/otf-secrets/src/: KeychainStore.cpp  SecretStore.cpp
cutpilot/sidecars/convert/: main.py
cutpilot/sidecars/convert/convert_sidecar/: __init__.py  comfy.py  fcpxml.py  otio.py  resolve_bridge.py  server.py  timeline_payload.py
cutpilot/sidecars/convert/tests/: test_convert_sidecar.py
cutpilot/sidecars/generation/: main.py
cutpilot/sidecars/generation/generation_sidecar/: __init__.py  jobs.py  keys.py  procedural.py  providers.py  registry.py  server.py
cutpilot/sidecars/generation/tests/: test_generation_sidecar.py
cutpilot/tests/: CMakeLists.txt  tst_alignmentguides.cpp  tst_canvastools.cpp  tst_chromewiring.cpp  tst_comfyimport.cpp  tst_commandpalette.cpp  tst_commandstack.cpp  tst_composite.cpp  tst_compositeinspector.cpp  tst_compositor.cpp  tst_compositorservice.cpp  tst_connections.cpp  tst_connectorpath.cpp  tst_convertflow.cpp  tst_edl.cpp  tst_exportcontroller.cpp  tst_generationcommands.cpp  tst_generationflow.cpp  tst_keymanager.cpp  tst_minimap.cpp  tst_nodegraph.cpp  tst_nodelayerwiring.cpp  tst_nodescreen.cpp  tst_pipelineflow.cpp  tst_pipelineorder.cpp  tst_previewwiring.cpp  tst_quickmode.cpp  tst_spatialindex.cpp  tst_theme.cpp  tst_timeline.cpp  tst_videosource.cpp  tst_workflowjson.cpp  tst_workflowstore.cpp  tst_workflowtemplates.cpp
